--- a/src/stylesheets/components/02_atoms.css
+++ b/src/stylesheets/components/02_atoms.css
@@ -1,98 +1,108 @@
-
 .A_Question {
-    text-align: left;
-    font-size: 64rem;
-    font-weight: 700;
-    color: #0037FF;
-    background-image: url('../../images/questionCard.webp');
-    background-size: cover;
-    background-position: center;
-    height: 130px;
-    padding-left: 2%;
-    padding-top: 2%;
+  text-align: left;
+  font-size: 64rem;
+  font-weight: 700;
+  color: #0037ff;
+  background-image: url('../../images/questionCard.webp');
+  background-size: cover;
+  background-position: center;
+  height: 130px;
+  padding-left: 2%;
+  padding-top: 2%;
 }
 .M_AnswerMassage {
-    margin: 0;
+  margin: 0;
 }
 .M_AnswerMassage input {
-    display: none;
+  display: none;
 }
 .A_AnswerText {
-    display: block;
-    padding: 6%;
-    cursor: pointer;
-    transition: 0.3s;
-    text-align: center;
-    font-size: 36rem;
-    font-weight: 100;
-    color: #0037FF;
+  display: block;
+  padding: 6%;
+  cursor: pointer;
+  transition: 0.3s;
+  text-align: center;
+  font-size: 36rem;
+  font-weight: 100;
+  color: #0037ff;
 }
 .A_AnswerText:hover {
-    transform: scale(1.03);
+  transform: scale(1.03);
 }
-input[type="radio"]:checked + .A_AnswerText {
-    color: white;
+input[type='radio']:checked + .A_AnswerText {
+  color: white;
 }
 .A_AnswerCard {
-    background-image: url('../../images/answerCard.webp');
-    background-size: cover;
-    background-position: center;
-    height: 140px;
+  background-image: url('../../images/answerCard.webp');
+  background-size: cover;
+  background-position: center;
+  height: 140px;
 }
 
 .A_BGRainbow {
   width: 100%;
 }
 .A_NumberOfQuestion {
-    display: none;
+  display: none;
 }
 .A_OverlayRect1 {
-    position: absolute;
-    width: 67%;
-    height: auto;
-    left: 50%; 
-    transform: translateX(-50%);
-    margin-top: 7%; 
-    pointer-events: none; 
-    z-index: 10; 
+  position: absolute;
+  width: 67%;
+  height: auto;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: 7%;
+  pointer-events: none;
+  z-index: 10;
 }
 
 .A_OverlayRect2 {
-    position: absolute;
-    width: 67%;
-    height: auto;
-    left: 50%; 
-    transform: translateX(-50%);
-    margin-top: 17%;
-    pointer-events: none; 
-    z-index: 10; 
+  position: absolute;
+  width: 67%;
+  height: auto;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: 17%;
+  pointer-events: none;
+  z-index: 10;
 }
 
 .M_TestResult {
-    max-width: 80%;           
-    padding-left: 2%;
-    padding: 2%;
-    text-align: left;     
-    color: #0037FF;
+  max-width: 80%;
+  padding-left: 2%;
+  padding: 2%;
+  text-align: left;
+  color: #0037ff;
 }
-.A_TestResultHeader{
-    font-size: 42rem; 
-    font-weight: 700;
+.A_TestResultHeader {
+  font-size: 42rem;
+  font-weight: 700;
 }
-.A_TestResultCount{
-    font-size: 36rem; 
-    font-weight: 300;
-    margin-bottom: 2%
+.A_TestResultCount {
+  font-size: 36rem;
+  font-weight: 300;
+  margin-bottom: 2%;
 }
-.A_TestResultParagraph{
-    font-size: 28rem; 
-    font-weight: 100;
+.A_TestResultParagraph {
+  font-size: 28rem;
+  font-weight: 100;
 }
 
-.A_TestPageName{
-    font-size: 36rem;
-    font-weight: 600;
-    color:#011970;
-    text-align: center;
-    display: block;
+.A_TestPageName {
+  font-size: 36rem;
+  font-weight: 600;
+  color: #011970;
+  text-align: center;
+  display: block;
+}
+
+.A_BigIcon {
+  text-align: center;
+}
+.A_BigIcon figcaption {
+  padding-top: 3%;
+  font-size: 18px;
+  font-weight: 400;
+  color: white;
+  text-decoration: none;
 }
